--- a/HW1/report/111550093_RLhw1.md
+++ b/HW1/report/111550093_RLhw1.md
@@ -182,33 +182,6 @@ def value_iteration(env, gamma=0.9, max_iterations=10**6, eps=10**-3):
     return policy
 
 def policy_iteration(env, gamma=0.9, max_iterations=10**6, eps=10**-3):
-    """ 
-        Run policy iteration (You probably need no more than 30 lines)
-        
-        Input Arguments
-        ----------
-            env: 
-                the target environment
-            gamma: float
-                the discount factor for rewards
-            max_iterations: int
-                maximum number of iterations for the policy evalaution in policy iteration
-            eps: float
-                for the termination criterion of policy evaluation 
-        ----------  
-        
-        Output
-        ----------
-            policy: np.array of size (500,)
-        ----------
-        
-        TODOs
-        ----------
-            1. Initialize with a random policy and initial value function
-            2. Get transition probabilities and reward function from the gym env
-            3. Iterate and improve the policy
-        ----------
-    """
     num_spaces = env.observation_space.n
     num_actions = env.action_space.n
     
@@ -262,16 +235,17 @@ def policy_iteration(env, gamma=0.9, max_iterations=10**6, eps=10**-3):
 
 After setting up all the dependencies that D4RL package needs, I successfully ran `d4rl_sanity_check.py` and gain the following results:
 
-![Untitled](img/maze2d-umaze-v1.png)
+<img src='img/maze2d-umaze-v1.png' width='500'>
 
 From the documentation of Gym ([link](https://robotics.farama.org/envs/maze/point_maze/)), we know that observation dataset is an `ndarray` of shape `(4,N)`. The elements of the array correspond to the following:
 
-![Screenshot 2024-03-18 at 4.39.32 PM.png](img/table1.png)
+<img src='img/table1.png' width='500'>
+
 
 Then I modified the `env = gym.make('maze2d-umaze-v1')` to `env = gym.make('hopper-medium-v0')`, a task of MuJoCo. 
 
-![Untitled](img/hopper-medium-v0.png)
+<img src='img/hopper-medium-v0.png' width='500'>
 
 From the documentation of Gym ([link](https://www.gymlibrary.dev/environments/mujoco/hopper/)), we know that observation dataset is an `ndarray` of shape `(11,N)`. The elements of the array correspond to the following:
 
-![Screenshot 2024-03-18 at 4.39.04 PM.png](img/table2.png)
+<img src='img/table2.png' width='500'>
